--- a/instagram-clone-page/css/style.css
+++ b/instagram-clone-page/css/style.css
@@ -29,7 +29,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 50%;   
 }
 
 .instagram-phone img {
@@ -58,6 +58,7 @@ body {
 
 .group:nth-child(1) {
     min-height: 19rem;
+
 }
 
 .instagram-logo {
@@ -86,10 +87,11 @@ body {
 .instagram-logout {
     color: #0095f6;
     margin-top: 1rem;
+
 }
 
 .not-account {
-    color: rgb(160, 160, 160);
+    color:rgb(160, 160, 160);
 }
 
 .link-blue {
@@ -117,6 +119,7 @@ body {
     height: 3rem;
     width: 10rem;
     background-size: cover;
+
 }
 
 .app-download:nth-child(1) {
@@ -124,11 +127,10 @@ body {
 }
 
 .app-download:nth-child(2) {
-    background-image: url('../imagens/googleplay-button.png');
+    background-image: url("../imagens/googleplay-button.png");
 }
 
 /* media queries */
-
 
 @media (max-width: 1024px) {
     .instagram-wrapper {
@@ -137,6 +139,7 @@ body {
 }
 
 @media (max-width: 650px) {
+
     body {
         background-color: #ffffff;
     }
@@ -152,7 +155,7 @@ body {
     .instagram-continue {
         width: 100%;
     }
-    
+
     .group {
         border: 1px solid transparent;
     }
