--- a/instagram-clone-page/css/style.css
+++ b/instagram-clone-page/css/style.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     min-width: 100vh;
     background-color: rgb(243, 243, 243);
-    margin: 0;
+    margin: 10px 0 0 0;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -26,6 +26,7 @@ body {
     justify-content: start;
     width: 60%;
     height: 100vh;
+
 }
 
 /* Definindo o estilo da foto do celular na esquerda */
@@ -49,6 +50,7 @@ body {
     flex-direction: column;
     width: 50%;
     min-height: 34rem;
+    height: 100%;
 }
 
 /* Estilizando o primeiro grupo (formulario) */
@@ -59,13 +61,14 @@ body {
     flex-direction: column;
     background-color: #ffffff;
     width: 100%;
-    padding: 1.3rem;
+    padding: 10px;
     border: 1px solid lightgray;
 }
 
 /* Definindo altura da logo */
 .logo {
     height: 3rem;
+    margin: 30px 0 30px 0;
 }
 
 /* Definindo estilo do formulario */
@@ -74,8 +77,6 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 1.3rem;
-
 }
 
 /* Estilo do campo email */
@@ -115,6 +116,17 @@ body {
     font-weight: bold;
 }
 
+/* Estilo Icone FB */
+.entrarcomfb {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.entrarcomfb img {
+    width: 18px;
+}
+
 /* Estilo do link entrar com Fb */
 .entrarComFb {
     color: blue;
@@ -142,7 +154,6 @@ body {
 .cadastre {
     color: #0095f6;
     font-weight: bold;
-    margin-left: 5px;
 }
 
 /* Estilo do terceiro grupo onde baixa o aplicativo */
@@ -151,10 +162,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1.3rem 0;
     width: 100%;
 }
 
+/* Estilo dos elementos para inserir os icones para fazer o download do aplicativo */
 .aplicativos {
     display: flex;
     width: 100%;
@@ -163,16 +174,60 @@ body {
     padding: 1rem;
 }
 
-.downloadApp:nth-child(1) {
+/* Estilo das caixas onde vao ser inseridos os icones */
+.downloadApp{
     height: 3rem;
     width: 10rem;
     background-size: cover;
+    border-radius: 5px;
+}
+
+/* Inserindo a imagem do icone app store */
+.downloadApp:nth-child(1) {
     background-image: url(../imagens/appstore.png);
 }
 
+/* Inserindo a imagem do icone google play */
 .downloadApp:nth-child(2) {
-    height: 3rem;
-    width: 10rem;
-    background-size: cover;
     background-image: url(../imagens/gplay.png);
+}
+
+/* Deixando o site responsivo (Media Queries) */
+/* ======================================================================================================================= */
+
+
+/* Para telas de notebook */
+@media (max-width: 1024px) {
+    .principal {
+        width: 90%;
+    }
+}
+
+
+/* Para telas pequenas */
+@media (max-width: 650px) {
+    body {
+        background-color: #ffffff;
+    }
+
+    .principal {
+        width: 90%;
+    }
+
+    .fotoCelular {
+        display: none;
+    }
+
+    .direita {
+        width: 100%;
+    }
+
+    .grupo1 {
+        border: 1px solid transparent;
+    }
+
+    .grupo2 {
+        border: 1px solid transparent;
+    }
+
 }
