--- a/netflix-clone-page/style/main.css
+++ b/netflix-clone-page/style/main.css
@@ -47,8 +47,8 @@ header nav a:hover{
 
 .filme-principal{
     font-size: 16px;
-    background: linear-gradient(rgba(20,20,20,.20), rgba(20,20,20.20)100%), url("../img/capa-elite.jpg");
-    height: 400px;
+    background: linear-gradient(rgba(20,20,20,.20), rgba(20,20,20.20)100%), url("../img/capa-deluge.png");
+    height: 500px;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -62,7 +62,7 @@ header nav a:hover{
 }
 
 .titulo{
-    margin-top: 15%;
+    margin-top: 5%;
     font-size: 40px;
     font-family: 'Trebuchet MS';
 }
@@ -72,7 +72,7 @@ header nav a:hover{
     border: none;
     color: white;
     padding: 15px 30px;
-    margin-right: 15px;
+    margin-left: 15px;
     font-size: 12px;
     cursor: pointer;
     transition: 1s ease all;
@@ -95,12 +95,60 @@ header nav a:hover{
     width: 70%;
 }
 
+.pop{
+    margin-left: 20px;
+    margin-bottom: 5px;
+}
+
 .box-filme{
     height: 100%;
+    max-height: 370px;
     width: 100%;
     display: block;
 }
 
-.carrosel-filmes{
-    margin-top: 5px;
+.conjuntos{
+    margin-left: 20px;
+    margin-bottom: 5px;
+}
+
+footer .logo{
+    margin-left: 200px;
+    color: var(--vermelho);
+    font-family: "Arial Black", Times;
+    font-size: 15px;
+}
+
+.rodape{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.social a{
+    text-decoration: none;
+    color: var(--vermelho);
+    width: 200px;
+}
+
+.sobre{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 5px;
+}
+
+.sobre a {
+    margin: 10px;
+    color: white;
+    text-decoration: none;
+    align-items: center;
+}
+
+.designby{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
 }
